--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -5,31 +5,42 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://1.94.101.193:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+    # 数据库连接URL，包含访问数据库所需的参数
     username: root
+    # 数据库用户名
     password: root
+    # 数据库密码
     druid:
-      initial-size: 5 #连接池初始化大小
-      min-idle: 10 #最小空闲连接数
-      max-active: 20 #最大连接数
+      initial-size: 5 # 连接池初始化大小
+      min-idle: 10 # 最小空闲连接数
+      max-active: 20 # 最大连接数
       web-stat-filter:
-        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*" #不统计这些请求数据
-      stat-view-servlet: #访问监控网页的登录用户名和密码
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"
+        # 不统计这些请求数据，避免不必要的性能开销
+      stat-view-servlet:
         login-username: druid
+        # 访问监控网页的登录用户名
         login-password: druid
+        # 访问监控网页的登录密码
+  # 数据配置块，用于定义数据库连接信息
   data:
+    # MongoDB配置子块，包含连接MongoDB数据库所需的信息
     mongodb:
+      # MongoDB主机地址，此处为本地主机
       host: localhost
+      # MongoDB端口号，标准MongoDB端口为27017
       port: 27017
+      # 要连接的数据库名称
       database: mall-port
   redis:
-    host: localhost # Redis服务器地址
+    host: 1.94.101.193 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password:  # Redis服务器连接密码（默认为空）
     timeout: 3000ms # 连接超时时间（毫秒）
   rabbitmq:
-    host: localhost
+    host: 1.94.101.193
     port: 5672
     virtual-host: /mall
     username: mall
