--- a/mall-monitor/src/main/resources/application.yml
+++ b/mall-monitor/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+#  该YAML配置文件用于Spring Boot应用，功能如下：
+#
+#    1. 设置应用名为`mall-monitor`；
+#    2. 配置安全登录用户名为`macro`，密码为`123456`；
+#    3. 配置Spring Boot Admin忽略自身（`${spring.application.name}`）的服务监控；
+#    4. 设置服务器端口为`8101`。
+
 spring:
   application:
     name: mall-monitor
@@ -9,5 +16,7 @@ spring:
     admin:
       discovery:
         ignored-services: ${spring.application.name}
+  profiles:
+    active: dev
 server:
   port: 8101
