--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -70,7 +70,7 @@ spring:
     # 指定Redis服务器的端口号，默认为6379
     port: 6379
     # 指定Redis服务器的主机名或IP地址，此处为本地主机
-    host: 1.94.101.193
+    host: localhost
     # 指定连接Redis服务器所需的密码，此处为空表示无密码访问
     password:
     timeout: 5000  # 增加超时时间
