--- a/mall-gateway/src/main/resources/bootstrap-dev.yml
+++ b/mall-gateway/src/main/resources/bootstrap-dev.yml
@@ -4,8 +4,8 @@ spring:
     nacos:
       # 配置服务发现的Nacos服务器地址
       discovery:
-        server-addr: http://1.94.101.193:8848
+        server-addr: http://localhost:8848
       # 配置服务配置的Nacos服务器地址和文件扩展名
       config:
-        server-addr: http://1.94.101.193:8848
+        server-addr: http://localhost:8848
         file-extension: yaml
