--- a/mall-monitor/src/main/resources/application-dev.yml
+++ b/mall-monitor/src/main/resources/application-dev.yml
@@ -4,4 +4,4 @@ spring:
     nacos:
       discovery:
         # Nacos服务器地址，用于服务发现和注册
-        server-addr: http://1.94.101.193:8848
+        server-addr: http://localhost:8848
