--- a/pom.xml
+++ b/pom.xml
@@ -274,7 +274,8 @@
                                 <!--定义镜像构建行为-->
                                 <build>
                                     <!--定义基础镜像-->
-                                    <from>java:8</from>
+<!--                                    <from>java:8</from>-->
+                                    <from>openjdk:8-jdk</from>
                                     <args>
                                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
                                     </args>
