--- a/document/docker/docker-compose-app.yml
+++ b/document/docker/docker-compose-app.yml
@@ -13,6 +13,8 @@ services:
     external_links:
       - mysql:db #可以用db这个域名访问mysql服务
       - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
+      - redis:redis #可以用redis这个域名访问redis服务
+
   mall-search:
     image: mall/mall-search:1.0-SNAPSHOT
     container_name: mall-search
