mall-search es 配置更新 mall-admin redis 配置更新

--- a/mall-search/src/main/resources/application.yml
+++ b/mall-search/src/main/resources/application.yml
@@ -23,7 +23,8 @@ spring:
       repositories:
         enabled: true
   elasticsearch:
-    uris: localhost:9200
+#    uris: localhost:9200
+    uris: es:9200
 mybatis:
   mapper-locations:
     - classpath:dao/*.xml
