--- a/mall-auth/src/main/resources/bootstrap.yml
+++ b/mall-auth/src/main/resources/bootstrap.yml
@@ -1,7 +1,8 @@
 # 设置Spring Profiles活动配置文件为开发环境(dev)
 spring:
   profiles:
-    active: dev
+#    active: dev
+    active: prod
   # 定义应用程序的名称为mall-auth
   application:
     name: mall-auth
