--- a/document/docker/nginx.conf
+++ b/document/docker/nginx.conf
@@ -36,7 +36,9 @@ http {
 	        root   /usr/share/nginx/html;
 	        index  index.html index.htm;
 	    }
-
+	    location /api/ {
+	        proxy_pass http://3.19.61.10:8201;
+	    }
 	    error_page   500 502 503 504  /50x.html;
 	    location = /50x.html {
 	        root   /usr/share/nginx/html;
