注释及附件目录添加-优化范畴

--- a/document/docker/nginx.conf
+++ b/document/docker/nginx.conf
@@ -1,48 +1,80 @@
-
+# 定义运行nginx的用户
 user  nginx;
+
+# 定义工作进程数，通常设置为CPU核心数
 worker_processes  1;
 
+# 定义错误日志文件路径和日志级别
 error_log  /var/log/nginx/error.log warn;
+
+# 定义nginx主进程ID文件路径
 pid        /var/run/nginx.pid;
 
 
+# 配置事件处理模型相关参数
 events {
+    # 定义每个工作进程允许的最大并发连接数
     worker_connections  1024;
 }
 
 
+# HTTP服务器配置块
 http {
+    # 包含MIME类型配置文件，用于根据文件扩展名设置Content-Type
     include       /etc/nginx/mime.types;
+
+    # 设置默认的MIME类型
     default_type  application/octet-stream;
 
+    # 定义访问日志格式，包含客户端IP、请求时间、请求行、状态码等信息
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
+    # 设置访问日志文件路径和使用的日志格式
     access_log  /var/log/nginx/access.log  main;
 
+    # 启用sendfile功能，提高文件传输性能
     sendfile        on;
     #tcp_nopush     on;
 
+    # 设置保持连接的超时时间（秒）
     keepalive_timeout  65;
 
     #gzip  on;
 
+    # 服务器配置块
     server {
+	    # 监听80端口
 	    listen       80;
+
+	    # 设置服务器域名
 	    server_name  localhost;
 
+	    # 根路径位置配置
 	    location / {
+	        # 设置网站根目录
 	        root   /usr/share/nginx/html;
+
+	        # 设置默认首页文件
 	        index  index.html index.htm;
 	    }
+
+	    # API路径代理配置
 	    location /api/ {
+; 	        # 将请求代理到指定的后端服务器
 ; 	        proxy_pass http://3.19.61.10:8201;
 	        proxy_pass http://mall-gateway:8201;
 	    }
+
+	    # 自定义错误页面配置
 	    error_page   500 502 503 504  /50x.html;
+
+	    # 50x错误页面位置配置
 	    location = /50x.html {
+	        # 设置错误页面根目录
 	        root   /usr/share/nginx/html;
 	    }
 	}
 }
+
