--- a/mall-admin/src/main/resources/bootstrap-dev.yml
+++ b/mall-admin/src/main/resources/bootstrap-dev.yml
@@ -1,8 +1,22 @@
+# Spring Cloud Nacos 配置
+# 用于配置Nacos服务发现和配置管理的相关参数
 spring:
   cloud:
     nacos:
+      # Nacos服务发现配置
+      # 配置Nacos服务注册与发现的相关参数
       discovery:
+        # Nacos服务地址
+        # 指定Nacos服务器的访问地址，用于服务注册与发现
         server-addr: http://localhost:8848
+      
+      # Nacos配置管理配置
+      # 配置Nacos分布式配置中心的相关参数
       config:
+        # Nacos配置服务器地址
+        # 指定Nacos配置服务器的访问地址，用于获取配置信息
         server-addr: http://localhost:8848
+        
+        # 配置文件扩展名
+        # 指定从Nacos配置中心获取的配置文件格式为YAML格式
         file-extension: yaml
