docker-compose-app.yml 暂时注释关于mall-monitor

--- a/document/docker/docker-compose-app.yml
+++ b/document/docker/docker-compose-app.yml
@@ -45,6 +45,7 @@ services:
 #      - mysql:db #可以用db这个域名访问mysql服务
 #      - rabbitmq:rabbit #可以用rabbit这个域名访问rabbitmq服务
 #      - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
+
   mall-auth:
     image: mall/mall-auth:1.0-SNAPSHOT
     container_name: mall-auth
@@ -70,15 +71,17 @@ services:
     external_links:
       - redis:redis #可以用redis这个域名访问redis服务
       - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
-  mall-monitor:
-    image: mall/mall-monitor:1.0-SNAPSHOT
-    container_name: mall-monitor
-    ports:
-      - 8101:8101
-    volumes:
-      - /mydata/app/mall-monitor/logs:/var/logs
-      - /etc/localtime:/etc/localtime
-    environment:
-      - 'TZ="Asia/Shanghai"'
-    external_links:
-      - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
+
+
+#  mall-monitor:
+#    image: mall/mall-monitor:1.0-SNAPSHOT
+#    container_name: mall-monitor
+#    ports:
+#      - 8101:8101
+#    volumes:
+#      - /mydata/app/mall-monitor/logs:/var/logs
+#      - /etc/localtime:/etc/localtime
+#    environment:
+#      - 'TZ="Asia/Shanghai"'
+#    external_links:
+#      - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
