--- a/document/docker/docker-compose-app.yml
+++ b/document/docker/docker-compose-app.yml
@@ -15,20 +15,21 @@ services:
       - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
       - redis:redis #可以用redis这个域名访问redis服务
 
-  mall-search:
-    image: mall/mall-search:1.0-SNAPSHOT
-    container_name: mall-search
-    ports:
-      - 8081:8081
-    volumes:
-      - /mydata/app/mall-search/logs:/var/logs
-      - /etc/localtime:/etc/localtime
-    environment:
-      - 'TZ="Asia/Shanghai"'
-    external_links:
-      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
-      - mysql:db #可以用db这个域名访问mysql服务
-      - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
+#  mall-search:
+#    image: mall/mall-search:1.0-SNAPSHOT
+#    container_name: mall-search
+#    ports:
+#      - 8081:8081
+#    volumes:
+#      - /mydata/app/mall-search/logs:/var/logs
+#      - /etc/localtime:/etc/localtime
+#    environment:
+#      - 'TZ="Asia/Shanghai"'
+#    external_links:
+#      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
+#      - mysql:db #可以用db这个域名访问mysql服务
+#      - nacos-registry:nacos-registry #可以用nacos-registry这个域名访问nacos服务
+
 #  mall-portal:
 #    image: mall/mall-portal:1.0-SNAPSHOT
 #    container_name: mall-portal
