--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -45,47 +45,47 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
-  elasticsearch:
-    image: elasticsearch:7.17.3
-    container_name: elasticsearch
-    user: root
-    environment:
-      - "cluster.name=elasticsearch" #设置集群名称为elasticsearch
-      - "discovery.type=single-node" #以单一节点模式启动
-      - "ES_JAVA_OPTS=-Xms512m -Xmx1024m" #设置使用jvm内存大小
-    volumes:
-      - /mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
-      - /mydata/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
-    ports:
-      - 9200:9200
-      - 9300:9300
-  logstash:
-    image: logstash:7.17.3
-    container_name: logstash
-    environment:
-      - TZ=Asia/Shanghai
-    volumes:
-      - /mydata/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf #挂载logstash的配置文件
-    depends_on:
-      - elasticsearch #kibana在elasticsearch启动之后再启动
-    links:
-      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
-    ports:
-      - 4560:4560
-      - 4561:4561
-      - 4562:4562
-      - 4563:4563
-  kibana:
-    image: kibana:7.17.3
-    container_name: kibana
-    links:
-      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
-    depends_on:
-      - elasticsearch #kibana在elasticsearch启动之后再启动
-    environment:
-      - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
-    ports:
-      - 5601:5601
+#  elasticsearch:
+#    image: elasticsearch:7.17.3
+#    container_name: elasticsearch
+#    user: root
+#    environment:
+#      - "cluster.name=elasticsearch" #设置集群名称为elasticsearch
+#      - "discovery.type=single-node" #以单一节点模式启动
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx1024m" #设置使用jvm内存大小
+#    volumes:
+#      - /mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
+#      - /mydata/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
+#    ports:
+#      - 9200:9200
+#      - 9300:9300
+#  logstash:
+#    image: logstash:7.17.3
+#    container_name: logstash
+#    environment:
+#      - TZ=Asia/Shanghai
+#    volumes:
+#      - /mydata/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf #挂载logstash的配置文件
+#    depends_on:
+#      - elasticsearch #kibana在elasticsearch启动之后再启动
+#    links:
+#      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
+#    ports:
+#      - 4560:4560
+#      - 4561:4561
+#      - 4562:4562
+#      - 4563:4563
+#  kibana:
+#    image: kibana:7.17.3
+#    container_name: kibana
+#    links:
+#      - elasticsearch:es #可以用es这个域名访问elasticsearch服务
+#    depends_on:
+#      - elasticsearch #kibana在elasticsearch启动之后再启动
+#    environment:
+#      - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
+#    ports:
+#      - 5601:5601
   mongo:
     image: mongo:4
     container_name: mongo
